# movie-subtitling

./: .gitignore  build-cuda-cc.bat  build-cuda-env.bat  build-cuda-final.bat  build-cuda-final2.bat  build-cuda-test.bat  build-cuda.bat  build-cuda2.bat  clean_svg.mjs  convert_svg.js  convert_svg_icons.py  create_icons.py  gen_small_icons.py  generate_icons.mjs  generate_icons.py  index.html  package-lock.json  package.json  start.bat  start.sh  test_env.bat
.claude/: settings.local.json
docs/: CUDA_BUILD_TROUBLESHOOT.md
scripts/: build-msvc.bat  check-deps.js  start-dev.bat  start-dev.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.bat  build_cuda.bat  build_log.txt  build_log2.txt  build_log3.txt  config.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_srt_parse.rs
src-tauri/icons/: icon.icns
src-tauri/patches/whisper-rs-sys/: Cargo.toml  build.rs
src-tauri/src/: main.rs
src-tauri/src/subtitle/: cleaners.rs  content.rs  mod.rs  pipeline.rs  processor.rs  quality.rs  rules.rs  timing.rs
src/components/: AsrSettings.tsx  ExportDialog.tsx  FileSelect.tsx  MainLayout.tsx  TranslationView.tsx
src/store/: useAppStore.ts
