[package]
name = "movie-subtitling"
version = "0.1.0"
description = "A subtitle generation tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
bindgen = "0.60.1"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
rfd = "0.15"
whisper-rs = { version = "0.16", default-features = false, features = ["cuda"] }

[patch.crates-io]
whisper-rs-sys = { path = "patches/whisper-rs-sys" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 2
