[package]
edition = "2021"
rust-version = "1.88.0"
name = "whisper-rs-sys"
version = "0.15.0"
build = "build.rs"
links = "whisper"
include = [
    "whisper.cpp/bindings/javascript/package-tmpl.json",
    "whisper.cpp/bindings/CMakeLists.txt",
    "whisper.cpp/CMakeLists.txt",
    "whisper.cpp/cmake",
    "whisper.cpp/src/**",
    "whisper.cpp/include/whisper.h",
    "whisper.cpp/ggml/cmake",
    "whisper.cpp/ggml/CMakeLists.txt",
    "whisper.cpp/ggml/src/**",
    "whisper.cpp/ggml/include/*.h",
    "whisper.cpp/LICENSE",
    "src/*.rs",
    "build.rs",
    "wrapper.h",
]
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "Rust bindings for whisper.cpp (FFI bindings) - PATCHED for CUDA on Windows BuildTools"
documentation = "https://docs.rs/whisper-rs-sys"
readme = false
license = "Unlicense"
repository = "https://codeberg.org/tazz4843/whisper-rs"

[features]
coreml = []
cuda = []
force-debug = []
hipblas = []
intel-sycl = []
metal = []
openblas = []
openmp = []
vulkan = []

[lib]
name = "whisper_rs_sys"
path = "src/lib.rs"

[build-dependencies.bindgen]
version = "0.72"

[build-dependencies.cfg-if]
version = "1"

[build-dependencies.cmake]
version = "0.1"

[build-dependencies.fs_extra]
version = "1.3"

[build-dependencies.semver]
version = "1.0"